# yt-music-app

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/routing/: app_router.dart
app/test/: api_client_test.dart  audio_handler_test.dart  health_screen_test.dart  settings_repository_test.dart  widget_test.dart
backend/: Dockerfile  README.md  pyproject.toml
backend/src/ytmusic_api/: config.py  main.py
backend/src/ytmusic_api/admin/: parser.py
backend/src/ytmusic_api/admin/templates/: index.html
backend/src/ytmusic_api/auth/: check.py  headers.py  health.py
backend/src/ytmusic_api/models/: catalog.py  health.py  library.py  stream.py
backend/src/ytmusic_api/routers/: admin.py  catalog.py  health.py  library.py  stream.py
backend/src/ytmusic_api/services/: cache.py  concurrency.py  pot_client.py  stream_resolver.py  ytmusic_client.py
backend/tests/: conftest.py  test_admin.py  test_auth_health.py  test_cache.py  test_catalog.py  test_concurrency.py  test_headers_store.py  test_health.py  test_library.py  test_pot_client.py  test_stream.py  test_stream_resolver.py
docs/superpowers/plans/: 2026-04-29-phase-0-foundations.md  2026-04-30-phase-1-search-and-playback.md  2026-04-30-phase-2-library-and-drift.md
docs/superpowers/specs/: 2026-04-29-yt-music-client-design.md
pot-provider/: Dockerfile
(+41 files in other folders)
